--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,128 @@ a {
     font-size: 2rem;
 }
 
+/* #wrapperM {
+    width: 100%;
+    margin: auto;
+    padding: 0;
+    display: grid;
+    grid-template-areas: 'hd'
+    'main'
+    'ft';
+}
+
+/* header {
+    grid-template-columns: hd;
+    background-color: rgb(218, 224, 233);
+
+} */
+
+/* body {
+    padding: 0;
+    margin: 0;
+}
+
+header h1 {
+    text-align: center;
+    color: rgb(29, 29, 80);
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav ul {
+    display: flex;
+}
+
+nav ul li {
+    list-style: none;
+    margin: 1rem 0.5rem 1rem 0.5rem ;
+}
+
+nav ul li a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}  */
+
+
 footer {
     height: 10px;
+}
+
+@media screen and (max-width:600px) {
+    body {
+        width: 100%;
+        background-color: rgb(55, 159, 224);
+    }
+
+    header {
+        position: relative;
+        width: 100vw;
+    }
+
+    #wrapper {
+        width: 100%;
+    }
+
+    main {
+        width: 100vw;
+    }
+
+    #hamburger {
+        height: 1.5rem;
+        width: 2.2rem;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+
+    }
+
+    #hamburger div {
+        border: 1px solid black;
+        margin: 0.3rem;
+    }
+
+    #sec4 {
+        width: 50vw;
+    }
+
+    #sec5 {
+        width: 50vw;
+    }
+
+    #sec6 {
+        width: 100vw;
+        position:static;
+        background-size: cover;
+    }
+
+    nav {
+        justify-content: center;
+        max-height: 0;
+        overflow: hidden;
+        transition-duration: 2s;
+    }
+
+    nav.active {
+        max-height: 1000px;
+        transition-duration: 2s;
+    }
+
+    nav ul {
+        display: block;
+        padding: 0;
+    }
+
+    nav ul li {
+        text-align: center;
+    }
+
+    nav ul li:hover {
+        background-color: rgb(27, 43, 90);
+    }
 }
