--- a/css2/style.css
+++ b/css2/style.css
@@ -74,6 +74,9 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s1;
+    background-image: url(../img/menyA1.jpg);
+    background-size: contain;
+
 }
 
 #sec2 {
@@ -84,6 +87,8 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s2;
+    background-image: url(../img/menuA2.jpg);
+    background-size: contain;
 }
 
 #sec3 {
@@ -94,6 +99,8 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s3;
+    background-image: url(../img/menuA3.jpg);
+    background-size: contain;
 }
 
 #sec4 {
@@ -104,6 +111,8 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s4;
+    background-image: url(../img/menuA4.jpg);
+    background-size: contain;
 }
 
 #sec5 {
@@ -114,6 +123,8 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s5;
+    background-image: url(../img/menuA5.jpg);
+    background-size: contain;
 }
 
 #sec6 {
@@ -124,13 +135,29 @@ ul {
     display: grid;
     border: solid rgb(255, 255, 255) 5px;
     grid-area: s6;
+    background-image: url(../img/menuA6.jpg);
+    background-size: contain;
 }
 
 @media screen and (max-width:600px) {
 
     body {
         width: 100vw;
-        background-color: rgb(55, 159, 224);
+        margin: 0;
+        padding: 0;
+        position: relative;
+    }
+
+    #wrapper {
+        position: relative;
+        margin: 0;
+        padding: 0;
+        grid-template-areas: 
+        'hd hd'
+        's0 s0'
+        's1 s2'
+        's3 s4'
+        's5 s6';
     }
 
     header {
@@ -138,13 +165,9 @@ ul {
         width: 100vw;
     }
 
-    #wrapper {
-        width: 100vw;
-        padding: 0;
-        margin: 0;
-    }
-
     main {
+        margin: 0;
+        padding: 0;
         width: 100vw;
     }
 
